--- a/style.css
+++ b/style.css
@@ -387,9 +387,3 @@ form {
         font-family: 'Lalezar', cursive;
         font-size: 1.1rem;
     }
-    .anim-typewriter2 {
-        width: 13em;
-    }
-    .anim-typewriter {
-        width: 9.5em;
-    }
